--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,15 @@
       <version>LATEST</version>
       <scope>provided</scope>
     </dependency>
+
+      <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.18.8</version>
+          <scope>provided</scope>
+      </dependency>
+
   </dependencies>
 
 
