--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,27 +17,17 @@
 
     <servlet-mapping>
     <servlet-name>default</servlet-name>
-    <url-pattern>/imag/*</url-pattern> <!--Путь к папке-->
+    <url-pattern>/images/*</url-pattern> <!--Путь к папке-->
     </servlet-mapping>
 
     <servlet>
-        <servlet-name>LoginServlet</servlet-name>
-        <servlet-class>com.softserve.tourcomp.controller.login.LoginServlet</servlet-class>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>LoginServlet</servlet-name>
-        <url-pattern>/login</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-    <servlet-name>IndexServlet</servlet-name>
-    <servlet-class>com.softserve.tourcomp.controller.home.IndexServlet</servlet-class>
+    <servlet-name>ProfileServlet</servlet-name>
+    <servlet-class>com.softserve.tourcomp.controller.client.ProfileServlet</servlet-class>
 </servlet>
 
     <servlet-mapping>
-        <servlet-name>IndexServlet</servlet-name>
-        <url-pattern>/index</url-pattern>
+        <servlet-name>ProfileServlet</servlet-name>
+        <url-pattern>/profile</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -49,5 +39,16 @@
         <servlet-name>RegisterServlet</servlet-name>
         <url-pattern>/register</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+    <servlet-name>LogoutServlet</servlet-name>
+    <servlet-class>com.softserve.tourcomp.controller.logout.LogoutServlet</servlet-class>
+</servlet>
+
+    <servlet-mapping>
+        <servlet-name>LogoutServlet</servlet-name>
+        <url-pattern>/logout</url-pattern>
+    </servlet-mapping>
+
 
 </web-app>
